3 note somewhat auto

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,5 +93,6 @@
     "valarray": "cpp",
     "variant": "cpp"
   },
-  "C_Cpp.errorSquiggles": "enabled"
+  "C_Cpp.errorSquiggles": "enabled",
+  "wpilib.autoStartRioLog": false
 }
