--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,7 +3,7 @@
   "robotLength": 0.762,
   "holonomicMode": true,
   "pathFolders": [
-    "New Folder"
+    "4 Note"
   ],
   "autoFolders": [],
   "defaultMaxVel": 5.5,
